--- a/publications.bib
+++ b/publications.bib
@@ -1,27 +1,29 @@
 
-@phdthesis{medeiros_organizando_2013,
+@mastersthesis{medeiros_organizing_2013,
 	address = {São Paulo},
-	type = {Dissertação de {Mestrado}},
-	title = {Organizando maiorias, agregando preferências: a {Assembleia} {Nacional} {Constituinte} de 1987-88},
-	shorttitle = {Organizando maiorias, agregando preferências},
+	title = {Organizing {Majorities}, {Aggregating} {Preferences}: {The} {National} {Constituent} {Assembly} of 1987-88 [in {Portuguese}]},
 	url = {http://www.teses.usp.br/teses/disponiveis/8/8131/tde-10052013-125220/pt-br.php#referencias},
-	abstract = {Reza a literatura neo-institucionalista que as normas que regem um processo decisório terão grande influência sobre o resultado final. Isto vale também para Assembleia Nacional Constituinte de 1987-1988....},
+	abstract = {According to the new institutionalist literature, the rules regulating a decision making process play great influence on its final result. Thisassumption applies to the 1987-1988 National Constituent Assembly (ANC). Otherwise, a group of legislators dissatisfied with the works course would not have risen with a proposal to reform the Internal Rules after two years of Assembly. The main goal of this work is tocomprehend the importance of the institutional structure for the political contests and the final result of the NCA. Thus, I aim to answer the following question: what are the effects of the rules regulating the convocation of the NCA, as well as the rules regulating its works which have changed during theprocess on the final results? The constitution-making design approved at the beginning (a congressional one instead of an exclusive one) and the organization form of the works (decentralized in thematic commissions) were largely contested because of the consequences political actors were anticipating and looking forward to, since they are always aware of the rule´s impact. The question is whether or not they anticipated it correctly, and for such it is possible to watch how they have behaved. Attempting to deepen the debate about strategic interaction on the constitutional process, the roll calls will be analyzed in order to understand how collective actors organize their preferences, building majorities in radicalized political contests.},
 	language = {por},
 	urldate = {2013-06-30},
-	school = {Faculdade de Filosofia, Letras e Ciências Humanas, Universidade de São Paulo},
-	author = {Medeiros, Danilo Buscatto},
+	school = {University of São Paulo},
+	author = {Medeiros, Danilo},
 	year = {2013},
-	note = {Reza a literatura neo-institucionalista que as normas que regem um processo decisório terão grande influência sobre o resultado final. Isto vale também para Assembleia Nacional Constituinte de 1987-1988. Não fosse assim um agrupamento de parlamentares descontentes com o andamento dos trabalhos constituintes não teria insurgido com uma proposta para a reformulação do Regimento Interno após quase um ano de funcionamento. Entender a importância do arcabouço institucional para as disputas políticas e o resultado final da ANC éa questão central desta dissertação. Desta forma, pretende-seresponder a seguinte pergunta: quais os efeitos tanto das normas que regularam o processo de formação/convocação da ANC, quanto do seu regimento que foi alterado ao longo dos trabalhos sobre o resultado final? O modelo de constituinte aprovado na convocação (congressual e não exclusiva) e o formato dos trabalhos constituintes (descentralização em subcomissões e comissões temáticas) foram amplamente contestados e disputados pelas consequências que os atores políticos antecipavam ou projetavam sobre elas. Os atores políticos sempre sabem que regras afetam resultados. Resta saber se eles sempre anteciparam corretamentee, para tanto, é possívelatentar para como eles se comportaram. Com o intuito de aprofundar o debate sobre a interação estratégica noprocesso constituinte, são analisadas as votações nominais no plenário da Constituinte para compreender como atores coletivos organizam preferências, reunindo maiorias em disputas políticas radicalizadas.},
 	keywords = {Assembleia nacional constituinte, Centrão, Ideal points, Maiorias, Majorities, National constituent assembly, Pontos ideais, Preferences, Preferências},
 }
 
-@incollection{freitas_procurando_2009,
+@incollection{freitas_looking_2009,
 	address = {São Paulo},
-	title = {Procurando o {Centrão}: direita e esquerda na {Assembléia} {Nacional} {Constituinte}, 1987-1988},
-	booktitle = {A {Constituição} de 1998: passado e futuro},
+	title = {Looking for {Centrão}: {Right} and {Left} in the 1987‑88 {Brazilian} {Constituent} {Assembly} [in {Portuguese}]},
+	isbn = {978-85-8404-288-3},
+	url = {https://neci.fflch.usp.br/sites/neci.fflch.usp.br/files/freitas-moura-medeiros_2009.pdf},
+	abstract = {The National Constituent Assembly (ANC) of 1987-1988 in Brazil started without a reference text, aiming to create an inclusive constitutional commission from scratch. This study examines how such a diverse assembly achieved coherent results, focusing on the mechanisms through which various tendencies coalesced to form the new Constitution, and the control and constraint mechanisms used. From a neo-institutionalist perspective, the final outcome was shaped by the ANC's internal rules rather than just individual preferences. This study identifies the determinants of institutional choices made by the constituents. Using rational choice theory, which posits that actors design institutions to maximize their preferences, the study analyzes the role of mechanisms introduced by the "Centrão." It also examines the behavior of this group, noting its lack of homogeneity. A systematic analysis of nominal votes will position the "Centrão" within the ANC's political dynamics.},
+	language = {pt-BR},
+	booktitle = {The 1988 {Constitution}: {Past} and {Future}},
 	publisher = {Hucitec e ANPOCS},
 	author = {Freitas, Rafael and Moura, Samuel and Medeiros, Danilo},
 	editor = {Carvalho, Maria Alice Rezende de and Araújo, Cícero and Simões, Júlio Assis},
+	month = oct,
 	year = {2009},
 	pages = {101 -- 135},
 }
@@ -46,13 +48,18 @@
 }
 
 @incollection{limongi_government_2022,
+	address = {Berlin},
+	series = {Ibero-{Online}.de},
 	title = {Government and {Congress}},
 	copyright = {https://creativecommons.org/licenses/by-sa/4.0/},
 	isbn = {978-3-935656-83-2},
 	url = {https://publications.iai.spk-berlin.de/receive/iai_mods_00000131},
+	abstract = {The word "grotesque" originates from "grotto" and typically refers to figures in art and literature that are discomforting, bizarre, or evoke pity. The Oxford English Dictionary defines it as "strange in a way that is unpleasant or offensive" or "extremely ugly in a strange way that is often frightening or funny". "Grotesque" aptly describes the two and a half years of Bolsonaro's administration. To be straightforward: Bolsonaro has not governed; he avoids taking responsibility for decisions and fails to engage in defining priorities or setting the agenda. His primary political objective appears to be dismantling policies adopted post-re-democratization, which he perceives as part of the leftist agenda of previous governments. This negative political agenda lacks alternatives. While Guedes and staunch neoliberals view this as positive, considering the state's intervention in the economy as the problem, their agenda remains negative as they lack substantial proposals for reform. Despite advocating for market-oriented reforms, the Guedes team has yet to deliver. The pandemic exacerbated this issue, highlighting the challenge of having state skeptics in charge when state intervention became crucial.},
 	language = {en},
+	number = {14},
 	urldate = {2022-03-02},
 	booktitle = {Brazil under {Bolsonaro}. {How} endangered is democracy?},
+	publisher = {Ibero-Amerikanisches Institut Preußischer Kulturbesitz},
 	author = {Limongi, Fernando and Freitas, Andréa and Medeiros, Danilo and Luz, Joyce},
 	editor = {Birle, Peter and Speck, Bruno},
 	year = {2022},
@@ -75,14 +82,17 @@
 	month = feb,
 	year = {2021},
 	note = {Publisher: Cambridge University Press},
-	keywords = {political parties, legislative speechmaking, Policy positions, text-as-data},
+	keywords = {legislative speechmaking, Policy positions, political parties, text-as-data},
 	pages = {145--164},
 }
 
-@incollection{freitas_coalizoes_2020,
+@incollection{freitas_coalitions_2020,
 	address = {São Paulo},
-	title = {Coalizões e {Comportamento} {Legislativo} no {Brasil} (1988-2010)},
-	booktitle = {A {Nova} {Ciência} da {Política}},
+	title = {Coalitions and {Legislative} {Behavior} in {Brazil} (1988‑2010) [in {Portuguese}]},
+	isbn = {978-65-87621-23-4},
+	abstract = {This study aims to understand the behavior of Brazilian Deputies and Senators in nominal votes vis-à-vis party strategies of coalition participation. We contribute to the discussion on the formation, operation, and maintenance of government coalitions in multiparty presidential systems. The assumption of a unidimensional preference distribution in the Brazilian Legislature, characterized by government-opposition conflict, has been widely accepted. However, previous research has primarily focused on the Chamber of Deputies, neglecting potential specificities of the Federal Senate. Our first concern is to introduce the Senate into the analysis to determine if it can also be characterized as unidimensional and if, like the Chamber, the distribution of senators reflects the government-opposition divide. Secondly, we explore the explanations for this pattern, particularly examining whether formal entry or exit from a coalition party influences legislative behavior. These inquiries underscore our aim to shed light on preference aggregation and the impact of government coalition participation. We outline our methodology, discuss the dimensionality issue, evaluate the coalition's influence on legislative behavior, and conclude with final remarks.},
+	language = {pt-BR},
+	booktitle = {The {New} {Science} of {Politics}},
 	publisher = {FFLCH/USP},
 	author = {Freitas, Andréa and Izumi, Mauricio and Medeiros, Danilo},
 	editor = {Arantes, Rogério and Petroni, Lucas},
@@ -90,21 +100,27 @@
 	pages = {327--360},
 }
 
-@article{medeiros_onde_2022,
-	title = {Onde está a {Polarização} {Política} no {Brasil}?},
-	volume = {xxiii},
+@article{medeiros_where_2022,
+	title = {Where is the {Political} {Polarization} in {Brazil}? [in {Portuguese}]},
+	volume = {XXIII},
+	issn = {1519-0951},
+	url = {https://www.kas.de/documents/265553/265602/KA+Cad+2022.1+-+cap%C3%ADtulo+2+vf.pdf/d8e32c39-db5a-9695-b931-c362e92686d7?t=1652375381805},
+	abstract = {Contemporary Brazilian politics is frequently described as "polarized" by academics, journalists, commentators, and the general public. This term often implies a crisis and dysfunctionality, similar to descriptions of other democracies. But what exactly does political polarization entail? Is it occurring only among the electorate, or also within parties and among parliamentarians? How has this phenomenon developed in Brazil and other countries? This essay aims to answer these questions and contribute to the discussion about the interaction between the preferences and interests of representatives and those they represent. To this end, I provide an overview of the literature and present data specific to the Brazilian case. Finally, I discuss the possible impacts of polarization on the 2022 elections and the future of democracy.},
+	language = {pt-BR},
 	number = {1},
-	journal = {Cadernos Adenauer xxiii},
+	journal = {Cadernos Adenauer},
 	author = {Medeiros, Danilo},
 	year = {2022},
+	pages = {32--55},
 }
 
-@incollection{perissinotto_estudos_2022,
+@incollection{perissinotto_legislative_2022,
 	address = {Rio de Janeiro, RJ},
-	title = {Estudos {Legislativos} em {Perspectiva} {Comparada}},
+	title = {Legislative {Studies} in {Comparative} {Perspective} [in {Portuguese}]},
 	isbn = {9786587949703},
+	abstract = {The study of legislatures is a critical subfield in Political Science due to the omnipresence of assemblies and their impact on democratic governance. This subfield, particularly under neo-institutionalism, examines how the internal organization and decision-making processes within legislatures influence public policy outcomes. Key questions focus on the rules and procedures that shape the influence of various legislative bodies. This chapter provides an overview of comparative legislative studies, highlighting significant theories and methods. While not exhaustive, it points out major themes and exemplary studies. Initially, it reviews foundational research on the U.S. Congress from the 1970s, which laid the groundwork for the subfield. The chapter then explores the expansion of comparative research to legislatures worldwide, particularly noting the institutionalist approach that dominates current studies. Special attention is given to Latin American legislative studies due to the region's unique multiparty presidential systems. Further, the chapter examines Brazilian legislative studies, identifying key themes that align with comparative analysis theories. Methodological approaches and empirical strategies in comparative legislative research are also discussed. The chapter concludes with brief final considerations.},
 	language = {pt-BR},
-	booktitle = {Política {Comparada}: {Teoria} e método},
+	booktitle = {Comparative {Politics}: {Theory} and {Methods}},
 	publisher = {Eduerj},
 	author = {Figueiredo, Argelina and Freitas, Andréa and Medeiros, Danilo},
 	editor = {Perissinotto, Renato and Botelho, João Carlos Amoroso and Bolognesi, Bruno and Batista, Mariana and Santos, Manoel Leonardo},
